# weeBell_bluetooth

./: .gitignore  readme.md
gcore_pots_bt/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
gcore_pots_bt/components/audio_assets/: CMakeLists.txt  aus_dialtone.h  india_dialtone.h  uk_offhook.h
gcore_pots_bt/components/audio_drivers/: CMakeLists.txt  audio_hal.c  audio_hal.h  es8388.c  es8388.h
gcore_pots_bt/components/gcore/: CMakeLists.txt  gcore.c  gcore.h  power_utilities.c  power_utilities.h  ps.c  ps.h  rtc.c  rtc.h  time_utilities.c  time_utilities.h
gcore_pots_bt/components/gui/: CMakeLists.txt  gui_screen_main.c  gui_screen_main.h  gui_screen_settings.c  gui_screen_settings.h  gui_screen_time.c  gui_screen_time.h  gui_utilities.c  gui_utilities.h
gcore_pots_bt/components/gui_assets/: CMakeLists.txt  phone_dial_60_60.c  phone_dial_60_60_pressed.c  phone_hangup_60_60.c  phone_hangup_60_60_pressed.c
gcore_pots_bt/components/i2c/: CMakeLists.txt  i2c.c  i2c.h
gcore_pots_bt/components/lvgl_drivers/: CMakeLists.txt
gcore_pots_bt/components/spandsp/: CMakeLists.txt  adsi.c  adsi.h  async.c  async.h  complex_dds.c  crc.c  dc_restore.h  dds_float.c  dds_int.c  dtmf.c  dtmf.h  echo.c  fsk.c  fsk.h  logging.c  logging.h  power_meter.c  queue.c  queue.h  spandsp.h  super_tone_rx.c  super_tone_rx.h  super_tone_tx.c  super_tone_tx.h  (+4 more)
gcore_pots_bt/main/: CMakeLists.txt  Kconfig  app_task.c  app_task.h  audio_task.c  audio_task.h  bt_task.c  bt_task.h  gcore_task.c  gcore_task.h  gui_task.c  gui_task.h  main.c  pots_task.c  pots_task.h  sys_common.h
(+23 files in other folders)
